# project-morgan

./: Makefile  README.md  ai_engine.py  main.py  models.py  morgan.py  priority_engine.py  pyproject.toml  requirements.txt  slack_client.py
.serena/: project.yml
.serena/memories/: project_overview.md
